--- a/Engine/Engine/Engine.csproj
+++ b/Engine/Engine/Engine.csproj
@@ -112,6 +112,8 @@
     <Compile Include="Game1.cs" />
     <Compile Include="src\classes\cont\ObjCont.cs" />
     <Compile Include="src\classes\cont\RoomCont.cs" />
+    <Compile Include="src\classes\ext\ExtClasses.cs" />
+    <Compile Include="src\classes\ext\ExtTexture.cs" />
     <Compile Include="src\classes\ext\Ext.cs" />
     <Compile Include="src\classes\game\Player.cs" />
     <Compile Include="src\classes\handlers\GameHandler.cs" />
